--- a/styles/style.css
+++ b/styles/style.css
@@ -4,22 +4,14 @@ html {
 
 .page {
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  justify-items: center;
   min-width: 800px;
   height: 100%;
   font-family: Raleway, sans-serif;
 }
 
-.content {
-  position: relative;
-  display: grid;
-  justify-items: center;
-  align-items: start;
-}
-
-.content::before {
+.page::before {
   content: '';
   z-index: 3;
   grid-column: 1 / 2;
